deployments/whoami/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: whoami
